<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.mahmoudreda.ustCoffe.menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="2.8"
        android:orientation="vertical"
        android:weightSum="6">

        <Button
            android:id="@+id/wagapat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wagapat"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />

        <Button
            android:id="@+id/makarona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/مكرونة"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />

        <Button
            android:id="@+id/sandwetshat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/سندوتشات"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />

        <Button
            android:id="@+id/pitza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/بيتزا"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />

        <Button
            android:id="@+id/helw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/الحلو"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />

        <Button
            android:id="@+id/mshrobat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/مشروبات"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/my_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:background="#5F9EA0"
        android:gravity="center"
        android:text="@string/طلبك"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffff"
        android:textStyle="bold" />
</LinearLayout>